# rtsp-ndi

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
src/rtsp_ndi/: bridge.py  ndi_ctypes.py  service.py
