[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtsp-ndi"
version = "0.2.0"
description = "Bridge an RTSP stream to an NDI source"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Matthew Meekins", email = "matthewmeekins@gmail.com" }]
requires-python = ">=3.10"
keywords = ["ndi", "rtsp", "video", "streaming", "broadcast"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "av>=13.0.0",
    "numpy>=1.24.0",
    "ndi-python>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/matthewmeekins/rtsp-ndi"
Repository = "https://github.com/matthewmeekins/rtsp-ndi"

[project.scripts]
rtsp-to-ndi = "rtsp_ndi.bridge:main"
rtsp-ndi    = "rtsp_ndi.service:main"

[tool.setuptools.packages.find]
where = ["src"]
